--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8888
+spring.application.name=brewery-config-server
 
+spring.cloud.config.server.git.uri=https://github.com/hmnshgpt455/brewery-config
+spring.cloud.config.server.git.clone-on-start=true
+
+logging.level.org.springframework.cloud=debug
+logging.level.org.springframework.web=debug
