--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=brewery-config-server
 
 spring.cloud.config.server.git.uri=https://github.com/hmnshgpt455/brewery-config
 spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.search-paths={application}
 
 logging.level.org.springframework.cloud=debug
 logging.level.org.springframework.web=debug
